--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ django-metamask-auth = "^0.1"
 django-import-export = "^2.8.0"
 ciso8601 = "^2.2.0"
 django-cors-headers = "^3.13.0"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
