--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ colorama==0.4.5; python_version >= "2.7" and python_full_version < "3.0.0" and p
 cytoolz==0.12.0; python_version >= "3.8" and python_full_version < "3.5.2" and implementation_name == "cpython" and python_version < "4" or python_full_version > "3.5.2" and python_version < "4" and python_version >= "3.8" and implementation_name == "cpython"
 defusedxml==0.7.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_version >= "3.7" and python_full_version >= "3.5.0"
 diff-match-patch==20200713; python_version >= "3.7"
+dj-database-url==1.0.0
 django-cors-headers==3.13.0; python_version >= "3.7"
 django-import-export==2.8.0; python_version >= "3.7"
 django-metamask-auth==0.1; python_version >= "3.8"
@@ -57,6 +58,7 @@ parsimonious==0.8.1; python_version >= "3.8" and python_version < "4"
 path==16.4.0; python_version >= "3.7"
 promise==2.3
 protobuf==3.20.1; python_version >= "3.8" and python_version < "4"
+psycopg2==2.9.3; python_version >= "3.6"
 pycryptodome==3.15.0; python_version >= "3.8" and python_full_version < "3.0.0" and python_version < "4" and (python_version >= "3.8" and python_full_version < "3.5.2" and python_version < "4" or python_full_version > "3.5.2" and python_version < "4" and python_version >= "3.8") or python_version >= "3.8" and python_version < "4" and python_full_version >= "3.5.0" and (python_version >= "3.8" and python_full_version < "3.5.2" and python_version < "4" or python_full_version > "3.5.2" and python_version < "4" and python_version >= "3.8")
 pyjwt==2.4.0; python_version >= "3.8"
 pyrsistent==0.18.1; python_version >= "3.8" and python_version < "4"
@@ -84,6 +86,7 @@ varint==1.0.2; python_full_version >= "3.6.2" and python_full_version < "3.7.0" 
 wcwidth==0.2.5; python_full_version >= "3.6.2" and python_version < "4" and python_version >= "2.7"
 web3==5.28.0; python_version >= "3.8" and python_version < "4"
 websockets==9.1; python_version >= "3.8" and python_version < "4" and python_full_version >= "3.6.1"
+whitenoise==6.2.0; python_version >= "3.7"
 xlrd==2.0.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_version >= "3.7" and python_full_version >= "3.6.0"
 xlwt==1.3.0; python_version >= "3.7"
 yarl==1.8.1; python_version >= "3.8" and python_version < "4"
