--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,9 +19,9 @@ django-import-export = "^2.8.0"
 ciso8601 = "^2.2.0"
 django-cors-headers = "^3.13.0"
 gunicorn = "^20.1.0"
-psycopg2 = "^2.9.3"
 dj-database-url = "^1.0.0"
 whitenoise = "^6.2.0"
+psycopg2-binary = "^2.9.3"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
