--- a/requirements.txt
+++ b/requirements.txt
@@ -58,7 +58,7 @@ parsimonious==0.8.1; python_version >= "3.8" and python_version < "4"
 path==16.4.0; python_version >= "3.7"
 promise==2.3
 protobuf==3.20.1; python_version >= "3.8" and python_version < "4"
-psycopg2==2.9.3; python_version >= "3.6"
+psycopg2-binary==2.9.3; python_version >= "3.6"
 pycryptodome==3.15.0; python_version >= "3.8" and python_full_version < "3.0.0" and python_version < "4" and (python_version >= "3.8" and python_full_version < "3.5.2" and python_version < "4" or python_full_version > "3.5.2" and python_version < "4" and python_version >= "3.8") or python_version >= "3.8" and python_version < "4" and python_full_version >= "3.5.0" and (python_version >= "3.8" and python_full_version < "3.5.2" and python_version < "4" or python_full_version > "3.5.2" and python_version < "4" and python_version >= "3.8")
 pyjwt==2.4.0; python_version >= "3.8"
 pyrsistent==0.18.1; python_version >= "3.8" and python_version < "4"
