--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ gunicorn = "^20.1.0"
 dj-database-url = "^1.0.0"
 whitenoise = "^6.2.0"
 psycopg2-binary = "^2.9.3"
+django-filter = "^22.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
