--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ dj-database-url = "^1.0.0"
 whitenoise = "^6.2.0"
 psycopg2-binary = "^2.9.3"
 django-filter = "^22.1"
+django-ninja = "^0.19.1"
+hexbytes = "^0.3.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
