--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ python = "^3.10"
 python-decouple = "^3.6"
 path = "^16.4.0"
 Django = "^4.1"
-graphene-django = "^2.15.0"
 pandas = "^1.4.4"
 torch = "^1.12.1"
 django-q = "^1.3.9"
@@ -25,6 +24,7 @@ psycopg2-binary = "^2.9.3"
 django-filter = "^22.1"
 django-ninja = "^0.19.1"
 hexbytes = "^0.3.0"
+strawberry-graphql-django = "^0.5.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
