--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ django-filter = "^22.1"
 django-ninja = "^0.19.1"
 hexbytes = "^0.3.0"
 strawberry-graphql-django = "^0.5.0"
+strawberry-django-plus = "^1.25.2"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
