--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ authors = ["LJlkdskdjflsa <liliangjya@gmail.com>"]
 python = "^3.10"
 python-decouple = "^3.6"
 path = "^16.4.0"
-Django = "^4.1"
 pandas = "^1.4.4"
 torch = "^1.12.1"
 django-q = "^1.3.9"
@@ -26,6 +25,7 @@ django-ninja = "^0.19.1"
 hexbytes = "^0.3.0"
 strawberry-graphql-django = "^0.5.0"
 strawberry-django-plus = "^1.25.2"
+Django = "4"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
