--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ hexbytes = "^0.3.0"
 strawberry-graphql-django = "^0.5.0"
 strawberry-django-plus = "^1.25.2"
 Django = "4"
+django-jsonform = "^2.12.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
