--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ strawberry-graphql-django = "^0.5.0"
 strawberry-django-plus = "^1.25.2"
 Django = "4"
 django-jsonform = "^2.12.0"
+django-admin-interface = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
