--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,9 +25,10 @@ django-ninja = "^0.19.1"
 hexbytes = "^0.3.0"
 strawberry-graphql-django = "^0.5.0"
 strawberry-django-plus = "^1.25.2"
-Django = "4"
 django-jsonform = "^2.12.0"
 django-admin-interface = "^0.20.0"
+django-siwe-auth = "^0.3.2"
+Django = "^4.1.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
