--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ strawberry-django-plus = "^1.25.2"
 django-jsonform = "^2.12.0"
 django-admin-interface = "^0.20.0"
 django-siwe-auth = "^0.3.2"
-Django = "^4.1.1"
+Django = "4.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
