--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,8 +27,10 @@ strawberry-graphql-django = "^0.5.0"
 strawberry-django-plus = "^1.25.2"
 django-jsonform = "^2.12.0"
 django-admin-interface = "^0.20.0"
-django-siwe-auth = "^0.3.2"
 Django = "4.1"
+abnf = "1.1.1"
+django-ratelimit = "3.0.1"
+siwe = "1.0.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
