--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,6 @@ pandas = "^1.4.4"
 torch = "^1.12.1"
 django-q = "^1.3.9"
 tqdm = "^4.64.0"
-django-metamask-auth = "^0.1"
 django-import-export = "^2.8.0"
 ciso8601 = "^2.2.0"
 django-cors-headers = "^3.13.0"
@@ -31,6 +30,7 @@ Django = "4.1"
 abnf = "1.1.1"
 django-ratelimit = "3.0.1"
 siwe = "1.0.1"
+multicall = "^0.5.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
