--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ django-ratelimit = "3.0.1"
 siwe = "1.0.1"
 eth-retry = "^0.1.8"
 django-ethereum-events = "^4.2.0"
+multicall = "^0.6.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
