--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,8 +31,8 @@ abnf = "1.1.1"
 django-ratelimit = "3.0.1"
 siwe = "1.0.1"
 eth-retry = "^0.1.8"
-django-ethereum-events = "^4.2.0"
 multicall = "^0.6.1"
+simple-multicall = "^0.1.5"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
