--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "python.analysis.extraPaths": ["./learn"]
+  "python.linting.enabled": true,
+  "python.formatting.provider": "black",
+  "python.analysis.extraPaths": ["./learn"],
+  "python.analysis.typeCheckingMode": "basic"
 }
