--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,13 +25,13 @@ strawberry-graphql-django = "^0.5.0"
 strawberry-django-plus = "^1.25.2"
 django-jsonform = "^2.12.0"
 django-admin-interface = "^0.20.0"
-Django = "4.1"
 abnf = "1.1.1"
 django-ratelimit = "3.0.1"
 eth-retry = "^0.1.8"
 strawberry-django-jwt = "^0.2.3"
 web3 = "^5.31.1"
 siwe = "^2.1.0"
+Django = "^4.1.2"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
