--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,8 @@ eth-retry = "^0.1.8"
 strawberry-django-jwt = "^0.2.3"
 web3 = "^5.31.1"
 siwe = "^2.1.0"
-Django = "^4.1.2"
+Django = "4.0"
+django-ethereum-events = "^4.2.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
