--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ web3 = "^5.31.1"
 siwe = "^2.1.0"
 Django = "4.0"
 django-ethereum-events = "^4.2.0"
+djantic = "^0.7.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
